--- a/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -156,9 +156,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="ProdutoDAO.cs" />
+    <Compile Include="ProdutoDAOEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
