--- a/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -170,9 +170,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Comentarios.cs" />
+    <Compile Include="Compra.cs" />
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="MetodosAnteriores.cs" />
+    <Compile Include="Migrations\20230922213818_Inicial.cs" />
+    <Compile Include="Migrations\20230922213818_Inicial.designer.cs">
+      <DependentUpon>20230922213818_Inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20230922214234_Unidade.cs" />
+    <Compile Include="Migrations\20230922214234_Unidade.designer.cs">
+      <DependentUpon>20230922214234_Unidade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20230927230208_Compra.cs" />
+    <Compile Include="Migrations\20230927230208_Compra.designer.cs">
+      <DependentUpon>20230927230208_Compra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="ProdutoDAO.cs" />
     <Compile Include="ProdutoDAOEntity.cs" />
@@ -187,6 +201,7 @@
   <ItemGroup>
     <Content Include="ddl-produtos.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.1.1.0\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.1.1.0\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
