Arquivos gerados e modificados automaticamente

--- a/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -186,12 +186,17 @@
     <Compile Include="Migrations\20230927230208_Compra.designer.cs">
       <DependentUpon>20230927230208_Compra.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20231002104005_Promocao.cs" />
+    <Compile Include="Migrations\20231002104005_Promocao.designer.cs">
+      <DependentUpon>20231002104005_Promocao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="ProdutoDAO.cs" />
     <Compile Include="ProdutoDAOEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Promocao.cs" />
+    <Compile Include="PromocaoProduto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlLoggerProvider.cs" />
   </ItemGroup>
