Arquivos gerados e modificados automaticamente

--- a/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -169,8 +169,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Comentarios.cs" />
     <Compile Include="Compra.cs" />
+    <Compile Include="Endereco.cs" />
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="MetodosAnteriores.cs" />
@@ -189,6 +191,10 @@
     <Compile Include="Migrations\20231002104005_Promocao.cs" />
     <Compile Include="Migrations\20231002104005_Promocao.designer.cs">
       <DependentUpon>20231002104005_Promocao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20231003231457_Cliente.cs" />
+    <Compile Include="Migrations\20231003231457_Cliente.designer.cs">
+      <DependentUpon>20231003231457_Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
